--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="ただのボタン？"
+    />
+    <meta
+      name="twitter:description"
+      content="本当にただのボタンです（？）"
+    />
+    <meta
+      name="twitter:image"
+      content="https://random776.github.io/kacchan-uts2-22/pictures/stress.jpeg"
+    />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>ただのボタン</title>
   </head>
   <body>
     <div id="root"></div>
