--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://random776.github.io/kacchan-uts2-22/pictures/stress.jpeg"
+      content="https://random776.github.io/kacchan-uts2-22/pictures/stress.jpg"
     />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
